--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "GovtInvoiceNew",
   "private": true,
   "version": "0.0.1",
+    "engines": {
+    "node": "20.x"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
